<resources>
    <string name="app_name">JavaOptionApp</string>
    <string name="CMoney_API">CMoney_API</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Option">Option</string>
    <string name="title_mystrategy">My_Strategy</string>
    <string name="date">日期</string>
    <string name="update_two_year_data">更新近兩年資料</string>
    <string name="update_all_year_data">更新全部資料</string>
    <string name="update_date_data">更新台灣放假日資料</string>
    <string name="nowPrice">目前&#160;:&#160;</string>
    <string name="tradeDateText">交易日期&#160;:&#160;</string>
    <string name="openText">開盤&#160;:&#160;</string>
    <string name="highestPriceText">最高價&#160;:&#160;</string>
    <string name="lowestPriceText">最低價&#160;:&#160;</string>
    <string name="closePriceText">收盤價&#160;:&#160;</string>
    <string name="tradeVolumeText">交易量&#160;:&#160;</string>

    <string name="maket_data">市場資料</string>
    <string name="BA123690a">大盤籌碼日報</string>
    <string name="BA123695a">大盤漲跌家數</string>
    <string name="BA123691a">大盤外資</string>
    
    <string name="BA123692a">大盤主力</string>
    <string name="BA123693a">大盤官股</string>
    <string name="BA123694a">大盤資券</string>
    <string name="now_strategy">目前交易策略&#160;:&#160;</string>
    <string name="nothing">\n\n空手看盤</string>
    <string name="ApproachDateText">入場日期&#160;:&#160;</string>
    <string name="ablock" />
    <string name="EntryPointText">入場點數&#160;:&#160;</string>
    <string name="ExitPointText">平倉點數&#160;:&#160;</string>
    <string name="thisTimePerformanceText">此次平倉績效&#160;:&#160;</string>
    <string name="ExitBenefitPointText">停利點數&#160;:&#160;</string>
    <string name="LastTicketDayText">最後平倉日&#160;:&#160;</string>
    <string name="warningText">\n高點超過停利點&#160;收盤平倉</string>
    <string name="updateSuccess">更新成功</string>


</resources>