<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/now_strategy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_strategy"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/ApproachDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/now_strategy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/ApproachDateText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/ApproachDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/now_strategy"
        app:layout_constraintLeft_toRightOf="@id/ApproachDateText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/EntryPointText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ApproachDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/EntryPointText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/EntryPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ApproachDate"
        app:layout_constraintLeft_toRightOf="@id/ApproachDateText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/ExitPointText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/EntryPoint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/ExitPointText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/ExitPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/EntryPoint"
        app:layout_constraintLeft_toRightOf="@id/ApproachDateText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/thisTimePerformanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ExitPoint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/thisTimePerformanceText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/thisTimePerformance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ExitPoint"
        app:layout_constraintLeft_toRightOf="@id/thisTimePerformanceText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

</androidx.constraintlayout.widget.ConstraintLayout>