<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/now_strategy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_strategy"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/ApproachDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/now_strategy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ApproachDate"
        android:text="@string/ApproachDateText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/ApproachDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/now_strategy"
        app:layout_constraintLeft_toRightOf="@id/ApproachDateText"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/EntryPointText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/ApproachDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/EntryPoint"
        android:text="@string/EntryPointText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/EntryPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/EntryPointText"
        app:layout_constraintLeft_toRightOf="@id/EntryPointText"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/ExitBenefitPointText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/EntryPoint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ExitBenefitPoint"
        android:text="@string/ExitBenefitPointText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/ExitBenefitPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ExitBenefitPointText"
        app:layout_constraintLeft_toRightOf="@id/ExitBenefitPointText"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/LastTicketDayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/ExitBenefitPoint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/LastTicketDay"
        android:text="@string/LastTicketDayText"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/LastTicketDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/LastTicketDayText"
        app:layout_constraintLeft_toRightOf="@id/LastTicketDayText"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/ablock"
        />

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LastTicketDay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:text="@string/warningText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>